# toodoux

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
doc/: cli.md  config.md  features.md
intg-tests/: README.md  config.toml  tasks.json
rfcs/: 0000-template.md  0001-initial-design.md
src/: cli.rs  config.rs  config_file.rs  error.rs  filter.rs  interactive_editor.rs  lib.rs  main.rs  markup.rs  metadata.rs  subcmd.rs  task.rs  term.rs  view.rs
src/app/: cli.rs  interactive_editor.rs  main.rs  term.rs
src/markup/: markdown.rs
src/view/: cli.rs
