[package]
name = "toodoux"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "A modern task management tool"
keywords = ["todo", "task"]
categories = ["development-tools"]
homepage = "https://github.com/phaazon/toodoux"
repository = "https://github.com/phaazon/toodoux"
readme = "README.md"
edition = "2018"

[[bin]]
name = "td"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
colored = "2"
dirs = "2.0"
env_logger = "0.7.1"
log = "0.4.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3.13"
toml = "0.5.6"
