[package]
name = "toodoux"
version = "0.4.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "A modern task management tool"
keywords = ["todo", "task"]
categories = ["development-tools"]
homepage = "https://github.com/phaazon/toodoux"
repository = "https://github.com/phaazon/toodoux"
readme = "README.md"
edition = "2018"

[lib]
name = "toodoux"

[[bin]]
name = "td"
path = "src/app/main.rs"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
colored = "2"
dirs = "3"
env_logger = ">=0.8.2, <0.8.4"
itertools = "0.10.0"
log = "0.4.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3.22"
term_size = "0.3.2"
tempdir = "0.3.7"
toml = "0.5.8"
unicase = "2.6"
unicode-width = "0.1.8"

[dev-dependencies]
serde_test = "1"
